feat(code): update to use typescript

--- a/packages/aeicons-react/package.json
+++ b/packages/aeicons-react/package.json
@@ -1,11 +1,16 @@
 {
   "name": "aeicons-react",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "private": true,
   "dependencies": {
+    "@types/jest": "24.0.14",
+    "@types/node": "12.0.8",
+    "@types/react": "16.8.20",
+    "@types/react-dom": "16.8.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "typescript": "3.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
