feat(iconify): integrate some icons

--- a/packages/aeicons-react/package.json
+++ b/packages/aeicons-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aeicons-react",
-  "version": "0.3.1",
+  "version": "0.4.0",
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.15",
@@ -11,6 +11,11 @@
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "typescript": "3.4.5"
+  },
+  "devDependencies": {
+    "@iconify/icons-mdi-light": "^1.0.0",
+    "@iconify/icons-twemoji": "^1.0.1",
+    "@iconify/react": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
