--- a/packages/ae-ionic-react/package.json
+++ b/packages/ae-ionic-react/package.json
@@ -1,21 +1,21 @@
 {
   "name": "ae-ionic-react",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "private": true,
   "dependencies": {
-    "@ionic/react": "^4.8.0-rc.1",
-    "@ionic/react-router": "^4.8.0-rc.1",
+    "@ionic/react": "4.8.0-rc.1",
+    "@ionic/react-router": "4.8.0-rc.1",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.2",
-    "@types/react": "^16.9.2",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-router": "^5.0.3",
-    "@types/react-router-dom": "^4.3.4",
-    "ionicons": "^4.6.3",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1",
+    "@types/react": "16.9.2",
+    "@types/react-dom": "16.9.0",
+    "@types/react-router": "5.0.3",
+    "@types/react-router-dom": "4.3.4",
+    "ionicons": "4.6.3",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-router": "5.0.1",
+    "react-router-dom": "5.0.1",
     "react-scripts": "3.1.1",
     "typescript": "3.5.3"
   },
