--- a/packages/aeicons-react/package.json
+++ b/packages/aeicons-react/package.json
@@ -1,21 +1,21 @@
 {
   "name": "aeicons-react",
-  "version": "0.4.2",
+  "version": "0.4.3",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.16",
-    "@types/node": "12.6.9",
-    "@types/react": "16.8.24",
-    "@types/react-dom": "16.8.5",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
+    "@types/jest": "24.0.18",
+    "@types/node": "12.7.2",
+    "@types/react": "16.9.2",
+    "@types/react-dom": "16.9.0",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-scripts": "3.1.1",
     "typescript": "3.5.3"
   },
   "devDependencies": {
-    "@iconify/icons-mdi-light": "^1.0.0",
-    "@iconify/icons-twemoji": "^1.0.1",
-    "@iconify/react": "^1.1.1"
+    "@iconify/icons-mdi-light": "1.0.0",
+    "@iconify/icons-twemoji": "1.0.1",
+    "@iconify/react": "1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
