--- a/packages/ae-ionic-react/package.json
+++ b/packages/ae-ionic-react/package.json
@@ -1,22 +1,23 @@
 {
   "name": "ae-ionic-react",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "private": true,
   "dependencies": {
-    "@ionic/react": "4.9.0-rc.2",
-    "@ionic/react-router": "4.9.0-rc.2",
+    "@ionic/react": "4.10.0-rc.3",
+    "@ionic/react-router": "4.10.0-rc.3",
     "@types/jest": "24.0.18",
-    "@types/node": "12.7.5",
-    "@types/react": "16.9.2",
-    "@types/react-dom": "16.9.0",
-    "@types/react-router": "5.0.3",
-    "@types/react-router-dom": "4.3.5",
+    "@types/node": "12.7.8",
+    "@types/react": "16.9.3",
+    "@types/react-dom": "16.9.1",
+    "@types/react-router": "5.1.0",
+    "@types/react-router-dom": "5.1.0",
+    "babel-eslint": "^10.0.3",
     "ionicons": "4.6.3",
-    "react": "16.9.0",
-    "react-dom": "16.9.0",
-    "react-router": "5.0.1",
-    "react-router-dom": "5.0.1",
-    "react-scripts": "3.1.1",
+    "react": "16.10.0",
+    "react-dom": "16.10.0",
+    "react-router": "5.1.0",
+    "react-router-dom": "5.1.0",
+    "react-scripts": "3.1.2",
     "typescript": "3.6.3"
   },
   "scripts": {
