--- a/packages/ae-ionic-react/package.json
+++ b/packages/ae-ionic-react/package.json
@@ -1,24 +1,24 @@
 {
   "name": "ae-ionic-react",
-  "version": "0.0.7",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ionic/react": "4.10.0-rc.3",
-    "@ionic/react-router": "4.10.0-rc.3",
+    "@ionic/react": "4.11.0",
+    "@ionic/react-router": "4.11.0",
     "@types/jest": "24.0.18",
-    "@types/node": "12.7.8",
-    "@types/react": "16.9.3",
+    "@types/node": "12.7.12",
+    "@types/react": "16.9.5",
     "@types/react-dom": "16.9.1",
-    "@types/react-router": "5.1.0",
+    "@types/react-router": "5.1.1",
     "@types/react-router-dom": "5.1.0",
     "babel-eslint": "^10.0.3",
     "ionicons": "4.6.3",
-    "react": "16.10.0",
-    "react-dom": "16.10.0",
-    "react-router": "5.1.0",
-    "react-router-dom": "5.1.0",
-    "react-scripts": "3.1.2",
-    "typescript": "3.6.3"
+    "react": "16.10.2",
+    "react-dom": "16.10.2",
+    "react-router": "5.1.2",
+    "react-router-dom": "5.1.2",
+    "react-scripts": "3.2.0",
+    "typescript": "3.6.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,11 +29,17 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "description": "an adaept project"
 }
